kubernetes-learning-lab/04-bookshop-operations/topics/30-network-policies/policy/20-catalog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catalog-approved-visitors
  namespace: k8s-learning-operations
spec:
  podSelector:
    matchLabels:
      app: bookshop-ops
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: approved
      ports:
        - protocol: TCP
          port: 8080
